Check data saving in tables- Sandeep

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
@@ -173,7 +173,7 @@
                     <div class="Container100 Fleft">
                         <div style="margin-top: 10px;">
                             <p:selectBooleanCheckbox
-                                    value="#{tdcto.tdMasterData.acctOwnersDetail.citizenShipFlag}"
+                                    value="#{tdcto.tdMasterData.jointAcctOwnersDetail.citizenShipFlag}"
                                     styleClass="benCheckBox" itemLabel="USA Citizenship">
                             </p:selectBooleanCheckbox>
                         </div>
